Criando Crud de Categoria Socio; Criando Cadatro de Socio; Cirando Temaplete padrão; Gerando css para stylo da aplicação; Criando JavaScript para o cadastro de socio; Criando Arquivos de mensagens para internazionalização da aplicação; Criando Script de criação do banco; Criando Script de povoamento do banco; Adicionando tema twitter bootstrap à aplicação;

--- a/src/main/resources/br/com/open/socialclub/persistenciautil/SocialClub.properties
+++ b/src/main/resources/br/com/open/socialclub/persistenciautil/SocialClub.properties
@@ -4,4 +4,4 @@
 jdbc_driver=org.postgresql.Driver
 jdbc_user=postgres
 jdbc_password=admin
-jdbc_url=jdbc:postgresql://localhost:5432/socialClub
+jdbc_url=jdbc:postgresql://localhost:5432/social_club
